replicated issue where extra grid gap is showing at the bottom of lower buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -91,11 +91,10 @@
 }
 
 .grid-span {
-  grid-column: 1/3;
+  grid-column: span 2;
 }
 
 .equal-key {
-  grid-column: 4;
   font-size: 1rem;
   background-color: var(--toggle-key-bg);
   border-bottom: 4px solid var(--toggle-key-shadow);
